--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			body {
 				font-family: sans-serif;
 				font-size: 11px;
-				background-color: #1d1d1b;
+				background-color: transparent;
 				margin: 0px;
 			}
 			canvas {
@@ -29,7 +29,8 @@
 			.preview{
 				width: 100%;
 				height:  100%;
-				background-image: url("./img/globepreview.png?v3") ;
+				background-image: url("./img/globepreview.png?v3");
+        background-repeat: no-repeat;
 				background-size: contain;
 			}
 		</style>
