--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 				background-color: transparent; /* #1f26b4;*/
 			}
 			.preview{
-				width: 100%;
-				height:  100%;
+				width: 100vw;
+				height:  100vh;
 				background-image: url("./img/globepreview.png?v3");
         background-repeat: no-repeat;
+        background-position: center center;
 				background-size: contain;
 			}
 		</style>
